[lworld] Return value buffering in TLAB does not work with -XX:FastAllocateSizeLimit=0

XMLWordPrintable

      When running test java/lang/instrument/GetObjectSizeIntrinsicsTest.java with --enable-preview and -Xcomp, the vm crashes with the following message:

      #
      # Internal Error (/open/src/hotspot/share/utilities/copy.hpp:342), pid=344008, tid=344011
      # assert(is_aligned(to, alignment)) failed: must be aligned: 0x000072b9f376da59
      #
      # JRE version: Java(TM) SE Runtime Environment (23.0) (fastdebug build 23-lworld5ea-2024-06-21-1558186.fred...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-lworld5ea-2024-06-21-1558186.fred..., compiled mode, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1419a5b] Copy::assert_params_ok(HeapWordImpl**, long) [clone .part.0]+0x2b
      #


      Stack trace:

      --------------- T H R E A D ---------------

      Current thread (0x000072b9fc02eb10): JavaThread "main" [_thread_in_vm, id=344011, stack(0x000072ba03d00000,0x000072ba03e00000) (1024K)]

      Stack: [0x000072ba03d00000,0x000072ba03e00000], sp=0x000072ba03dfc5a0, free space=1009k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1419a5b] Copy::assert_params_ok(HeapWordImpl**, long) [clone .part.0]+0x2b (copy.hpp:342)
      V [libjvm.so+0x141d599] MemAllocator::allocate() const+0x569 (javaThread.hpp:991)
      V [libjvm.so+0x14f964e] ObjArrayKlass::allocate(int, JavaThread*)+0x2de (collectedHeap.inline.hpp:46)
      V [libjvm.so+0x16b24f2] OptoRuntime::new_array_C(Klass*, int, JavaThread*)+0x3f2 (runtime.cpp:278)
      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~RuntimeStub::_new_array_Java 0x000072ba00c37c47
      J 572 c2 java.util.ArrayList.grow(I)[Ljava/lang/Object; java.base (60 bytes) @ 0x000072ba00e99670 [0x000072ba00e99600+0x0000000000000070]
      J 571 c2 java.util.ArrayList.add(Ljava/lang/Object;[Ljava/lang/Object;I)V java.base (23 bytes) @ 0x000072ba00e96308 [0x000072ba00e961a0+0x0000000000000168]
      J 570 c2 java.util.ArrayList.add(Ljava/lang/Object;)Z java.base (25 bytes) @ 0x000072ba00e96b7c [0x000072ba00e96b40+0x000000000000003c]
      j java.lang.invoke.ClassSpecializer$Factory.<init>(Ljava/lang/invoke/ClassSpecializer;)V+164 java.base
      J 974 c2 java.lang.invoke.BoundMethodHandle$Specializer$Factory.<init>(Ljava/lang/invoke/BoundMethodHandle$Specializer;)V java.base (6 bytes) @ 0x000072ba00f924f0 [0x000072ba00f924c0+0x0000000000000030]
      j java.lang.invoke.BoundMethodHandle$Specializer.makeFactory()Ljava/lang/invoke/BoundMethodHandle$Specializer$Factory;+5 java.base
      j java.lang.invoke.BoundMethodHandle$Specializer.makeFactory()Ljava/lang/invoke/ClassSpecializer$Factory;+1 java.base
      j java.lang.invoke.ClassSpecializer.<init>(Ljava/lang/Class;Ljava/lang/Class;Ljava/lang/Class;Ljava/lang/invoke/MethodType;Ljava/lang/invoke/MemberName;Ljava/lang/String;Ljava/util/List;)V+65 java.base
      J 967 c2 java.lang.invoke.BoundMethodHandle$Specializer.<init>()V java.base (36 bytes) @ 0x000072ba00f8b530 [0x000072ba00f8b460+0x00000000000000d0]
      j java.lang.invoke.BoundMethodHandle.<clinit>()V+20 java.base
      v ~StubRoutines::call_stub 0x000072ba00c00d1a
      J 135 jdk.internal.misc.Unsafe.ensureClassInitialized0(Ljava/lang/Class;)V java.base (0 bytes) @ 0x000072ba00d8d252 [0x000072ba00d8d1e0+0x0000000000000072]
      J 269 c2 jdk.internal.misc.Unsafe.ensureClassInitialized(Ljava/lang/Class;)V java.base (18 bytes) @ 0x000072ba00de0794 [0x000072ba00de0760+0x0000000000000034]
      j java.lang.invoke.LambdaForm.createFormsFor(Ljava/lang/invoke/LambdaForm$BasicType;)V+6 java.base
      J 955 c2 java.lang.invoke.LambdaForm.identityForm(Ljava/lang/invoke/LambdaForm$BasicType;)Ljava/lang/invoke/LambdaForm; java.base (27 bytes) @ 0x000072ba00f87c30 [0x000072ba00f87be0+0x0000000000000050]
      J 953 c2 java.lang.invoke.MethodHandles.identity(Ljava/lang/Class;)Ljava/lang/invoke/MethodHandle; java.base (87 bytes) @ 0x000072ba00f88308 [0x000072ba00f88160+0x00000000000001a8]
      J 952 c2 java.lang.invoke.MethodHandles.constant(Ljava/lang/Class;Ljava/lang/Object;)Ljava/lang/invoke/MethodHandle; java.base (88 bytes) @ 0x000072ba00f7c9f4 [0x000072ba00f7c900+0x00000000000000f4]
      j java.lang.invoke.InnerClassLambdaMetafactory.buildCallSite()Ljava/lang/invoke/CallSite;+103 java.base
      j java.lang.invoke.LambdaMetafactory.metafactory(Ljava/lang/invoke/MethodHandles$Lookup;Ljava/lang/String;Ljava/lang/invoke/MethodType;Ljava/lang/invoke/MethodType;Ljava/lang/invoke/MethodHandle;Ljava/lang/invoke/MethodType;)Ljava/lang/invoke/CallSite;+67 java.base
      J 793 c2 java.lang.invoke.DirectMethodHandle$Holder.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base (24 bytes) @ 0x000072ba00f221bc [0x000072ba00f22160+0x000000000000005c]
      J 826 c2 java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base (32 bytes) @ 0x000072ba00f376d8 [0x000072ba00f37620+0x00000000000000b8]
      j java.lang.invoke.BootstrapMethodInvoker.invoke(Ljava/lang/Class;Ljava/lang/invoke/MethodHandle;Ljava/lang/String;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Class;)Ljava/lang/Object;+319 java.base
      j java.lang.invoke.CallSite.makeSite(Ljava/lang/invoke/MethodHandle;Ljava/lang/String;Ljava/lang/invoke/MethodType;Ljava/lang/Object;Ljava/lang/Class;)Ljava/lang/invoke/CallSite;+8 java.base
      j java.lang.invoke.MethodHandleNatives.linkCallSiteImpl(Ljava/lang/Class;Ljava/lang/invoke/MethodHandle;Ljava/lang/String;Ljava/lang/invoke/MethodType;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/invoke/MemberName;+6 java.base
      J 811 c2 java.lang.invoke.MethodHandleNatives.linkCallSite(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/invoke/MemberName; java.base (65 bytes) @ 0x000072ba00f23f28 [0x000072ba00f23e60+0x00000000000000c8]
      v ~StubRoutines::call_stub 0x000072ba00c00d1a
      j jdk.internal.module.ModuleBootstrap.decode(Ljava/lang/String;Ljava/lang/String;Z)Ljava/util/Map;+193 java.base
      j jdk.internal.module.ModuleBootstrap.initModulePatcher()Ljdk/internal/module/ModulePatcher;+7 java.base
      j jdk.internal.module.ModuleBootstrap.<clinit>()V+28 java.base
      v ~StubRoutines::call_stub 0x000072ba00c00d1a
      j java.lang.System.initPhase2(ZZ)I+0 java.base
      v ~StubRoutines::call_stub 0x000072ba00c00d1a
      Registers:
      RAX=0x000072ba06478000, RBX=0x000072ba03dfc688, RCX=0x000072ba05948a14, RDX=0x000072ba059b9a90
      RSP=0x000072ba03dfc5a0, RBP=0x000072ba03dfc5a0, RSI=0x0000000000000156, RDI=0x000072ba059b9ac0
      R8 =0x000072b9f376da59, R9 =0x000000000000000c, R10=0x0000000000000000, R11=0x000000000000000a
      R12=0x000072ba05faa644, R13=0x000072ba03dfc5d0, R14=0x000072ba03dfc690, R15=0x000072ba05f31be1
      RIP=0x000072ba05219a5b, EFLAGS=0x0000000000010202, CSGSFS=0x002b000000000033, ERR=0x0000000000000006
        TRAPNO=0x000000000000000e

            Assignee:
            Tobias Hartmann
            Reporter:
            Frederic Parain
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: