8336842: [lworld] Return value buffering in TLAB does not work with -XX:FastAllocateSizeLimit=0